# cli-env-encrypt

./: .gitignore  README.md  dbStore.py  encryptionHelper.py  main.py  pyproject.toml
.github/workflows/: format-lint-unit-tests.yml  run-unit-tests.yml
tests/: test_main.py
